--- a/less/type.less
+++ b/less/type.less
@@ -164,8 +164,8 @@ ol.inline {
   > li {
     display: inline-block;
     .ie7-inline-block();
-    padding-left: 5px;
-    padding-right: 5px;
+    padding-left: 10.7px;
+    padding-right: 9.5px;
   }
 }
 
@@ -213,6 +213,7 @@ hr {
 abbr[title],
 // Added data-* attribute to help out our tooltip plugin, per https://github.com/twitter/bootstrap/issues/5257
 abbr[data-original-title] {
+  border: 0;
   cursor: help;
 }
 abbr.initialism {
